# mini-pi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
assets/: icon.icns
assets/prompts/: title_generator.txt
assets/themes/: kibble.json
docs/: ISSUES.md  TODO.md  at-mention-autocomplete.md  design-review.md  gpui-component-migration-plan.md  gpui-in-action.md  gpui-wiki.md  markdown-improvement-plan.md  remote-api.md
examples/: generate_icons.rs  markdown_renderer.rs  markdown_test.md
pi-bridge/: .gitignore  README.md  package-lock.json  package.json  test_branch.cjs  test_bridge.cjs  tsconfig.json
pi-bridge/src/: commands.ts  config.test.ts  config.ts  extension-ui.ts  index.ts  messages.ts  send-file-tool.test.ts  send-file-tool.ts  server.ts  session.ts  types.ts  ui-context.ts
pi-commander/: .env.example  .gitignore  README.md  nuxt.config.ts  package.json  wrangler.jsonc
pi-commander/app/: app.vue
pi-commander/app/assets/css/: main.css
pi-commander/app/components/: ChatBox.vue  PiRemoteSettings.vue  QrScanner.vue  ThinkingLevelSelect.vue  UserMenu.vue
pi-commander/app/components/chat/: ChatTitle.vue  Loader.vue
pi-commander/app/components/chat/message/: MessageContent.vue
pi-commander/app/components/chat/tool/: Generic.vue  SendFile.vue
pi-commander/app/composables/: useModels.ts  useOpenAIKey.ts  usePiInit.ts  usePiMessages.ts  usePiRemote.ts  usePiRemoteConfig.ts  usePiRemoteSettingsModal.ts  useThinkingLevel.ts  useVad.ts  useVoiceInput.ts
pi-commander/app/layouts/: default.vue
pi-commander/app/pages/: index.vue
pi-commander/app/pages/chat/: [id].vue
pi-commander/app/utils/: ai.ts  audio.ts
pi-commander/public/: offline.html
pi-commander/scripts/: generate-pwa-icons.ts
pi-commander/server/api/: ai.post.ts  transcribe.post.ts
pi-commander/server/types/: env.d.ts
pi-commander/shared/utils/: models.ts
scripts/: build-macos.sh  build-windows.ps1  generate_icons.py
scripts/builder-assets/: generate_dmg_bg.py
scripts/installer/: app.icns
src/: actions.rs  app.rs  chat_window.rs  dropdown.rs  input.rs  lib.rs  main.rs  model_config.rs  models.rs  pi_rpc.rs  store.rs  thread_list.rs  title_bar.rs  utils.rs
src/auth/: mod.rs  state.rs  supabase.rs
src/config/: app_config.rs  mod.rs  model_config.rs
src/core/: actions.rs  app.rs  assets.rs  mod.rs  session_handle.rs  session_manager.rs
src/data/: models.rs  store.rs
src/remote/: auth.rs  cloudflared.rs  controller.rs  mod.rs  qr.rs  server.rs  tunnel.rs  types.rs
src/rpc/: mod.rs  pi_rpc.rs
src/sync/: mod.rs  settings_sync.rs
src/ui/: chat_input.rs  dropdown.rs  input.rs  loader.rs  markdown.rs  mod.rs  text_area.rs  toast.rs
src/ui/markdown/: builder.rs  mod.rs  parser.rs
src/utils/: color.rs  file_scanner.rs  format.rs  llm.rs  mod.rs  paths.rs  voice.rs
src/views/: about.rs  chat_app.rs  chat_window.rs  create_thread_button.rs  import_prompt.rs  install_extension.rs  mini_app.rs  mod.rs  onboarding.rs  pi_agent_import.rs  pi_settings.rs  reasoning.rs  skills_panel.rs  thread_list.rs  title_bar.rs  tool_call.rs  user_panel.rs  workspace_filter.rs  workspace_manager.rs
wix/: main.wxs
