[package]
name = "mini-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
unicode-segmentation = "1.12"
raw-window-handle = "0.6"
smol = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
rusqlite = { version = "0.33", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
nanoid = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
sha2 = "0.10"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
url = "2"
percent-encoding = "2"
fs2 = "0.4"
syntect = "5"
linkify = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.26"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
subtle = "2"
gpui-component = "0.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
tar = "0.4"
flate2 = "1"
